@@ -1,15 +1,19 @@
 package com.asg.finance.service.impl;
 
 import com.asg.common.lib.dto.*;
+import com.asg.common.lib.dto.request.LogRequestDto;
 import com.asg.common.lib.enums.LogDetailsEnum;
 import com.asg.common.lib.exception.ResourceNotFoundException;
 import com.asg.common.lib.service.DocumentSearchService;
 import com.asg.common.lib.service.DocumentDeleteService;
 import com.asg.common.lib.service.LoggingService;
-import com.asg.common.lib.service.LovDataService;
 import com.asg.finance.client.RoleServiceClient;
 import com.asg.finance.dto.masters.*;
+import com.asg.finance.entity.GlobalLogDetails;
+import com.asg.finance.entity.GlobalLogSummary;
 import com.asg.finance.entity.master.*;
+import com.asg.finance.repository.GlobalLogDetailsRepository;
+import com.asg.finance.repository.GlobalLogSummaryRepository;
 import com.asg.finance.repository.master.InsuranceMasterRepository;
 import com.asg.common.lib.exception.ValidationException;
 import com.asg.common.lib.security.util.UserContext;
@@ -17,18 +21,18 @@ import com.asg.common.lib.utility.PaginationUtil;
 import com.asg.finance.service.InsuranceMasterService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.BeanUtils;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.math.BigDecimal;
+import java.sql.Timestamp;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 
 @Service
 @RequiredArgsConstructor
@@ -39,9 +43,8 @@ public class InsuranceMasterServiceImpl implements InsuranceMasterService {
     private final DocumentDeleteService documentDeleteService;
     private final RoleServiceClient roleServiceClient;
     private final LoggingService loggingService;
-    
-    @Autowired
-    private LovDataService lovService;
+    private final GlobalLogSummaryRepository globalLogSummaryRepository;
+    private final GlobalLogDetailsRepository globalLogDetailsRepository;
 
     private String getCurrentUser() {
         return UserContext.getUserId() != null ? String.valueOf(UserContext.getUserId()) : "SYSTEM";
@@ -49,9 +52,8 @@ public class InsuranceMasterServiceImpl implements InsuranceMasterService {
 
     @Override
     public InsuranceMasterResponseDto getInsuranceMasterById(Long insuranceId) {
-        InsuranceMaster insuranceMaster = insuranceMasterRepository.findById(insuranceId)
-                .orElseThrow(() -> new ResourceNotFoundException("Insurance Master", "ID", insuranceId));
-        return mapToResponseDto(insuranceMaster);
+        return mapToResponseDto(insuranceMasterRepository.findById(insuranceId)
+                .orElseThrow(() -> new ResourceNotFoundException("Insurance Master", "ID", insuranceId)));
     }
 
     @Override
@@ -78,7 +80,7 @@ public class InsuranceMasterServiceImpl implements InsuranceMasterService {
         if (insuranceMasterRepository.hasPjReference(insuranceId)) {
             throw new ValidationException("Cannot delete — Insurance linked with Purchase Journal Reference");
         }
-        
+
         documentDeleteService.deleteDocument(
                 insuranceId,
                 "GLOBAL_INSURANCE_HDR",
@@ -92,8 +94,6 @@ public class InsuranceMasterServiceImpl implements InsuranceMasterService {
     @Transactional
     public InsuranceMasterResponseDto createInsuranceMaster(InsuranceMasterRequestDto request) {
         try {
-            System.out.println("Creating insurance master for policy: " + request.getPolicyNo());
-
             // Validate policy number format
             if (!request.getPolicyNo().matches("^POL[0-9]{8}$")) {
                 throw new ValidationException("Policy number must be in format POL12345678");
@@ -162,7 +162,7 @@ public class InsuranceMasterServiceImpl implements InsuranceMasterService {
                     .insuranceAmount(request.getInsuranceAmount())
                     .premiumAmount(request.getPremiumAmount())
                     .paymentFrequency(request.getPaymentFrequency())
-                    .oneTime("N")
+                    .oneTime(request.getOneTime() != null ? request.getOneTime() : "N")
                     .description(request.getDescription())
                     .deleted("N")
                     .createdBy(getCurrentUser())
@@ -175,14 +175,18 @@ public class InsuranceMasterServiceImpl implements InsuranceMasterService {
             InsuranceMaster saved = insuranceMasterRepository.save(insuranceMaster);
             buildAndSetChildDetails(request, saved);
             InsuranceMaster finalSaved = insuranceMasterRepository.save(saved);
-            
-            // Logging for create operation
-            loggingService.createLogSummaryEntry(LogDetailsEnum.CREATED, UserContext.getDocumentId(), finalSaved.getTransactionPoid().toString());
-            
+
+            String docId = UserContext.getDocumentId();
+            String docKeyPoid = finalSaved.getTransactionPoid().toString();
+            Timestamp now = new Timestamp(System.currentTimeMillis());
+
+            String createdMessage = String.format("Created - - DOC:%s KEY:%s", docId, docKeyPoid);
+            GlobalLogSummary headerLog = createSummaryLogEntry(LogDetailsEnum.CREATED, docId, docKeyPoid, createdMessage, now);
+            globalLogSummaryRepository.save(headerLog);
+
+
             return mapToResponseDto(finalSaved);
         } catch (Exception e) {
-            System.err.println("Error in createInsuranceMaster: " + e.getMessage());
-            e.printStackTrace();
             throw new RuntimeException("Failed to create Insurance Master: " + e.getMessage(), e);
         }
     }
@@ -190,15 +194,22 @@ public class InsuranceMasterServiceImpl implements InsuranceMasterService {
     @Override
     @Transactional
     public InsuranceMasterResponseDto updateInsuranceMaster(Long insuranceId, InsuranceMasterRequestDto request) {
-        // Preserve existing PJ_REF_POID if already linked
-
-
         InsuranceMaster existing = insuranceMasterRepository.findById(insuranceId)
                 .orElseThrow(() -> new ResourceNotFoundException("Insurance Master", "ID", insuranceId));
 
         // Create copy of old entity for logging
         InsuranceMaster oldEntity = new InsuranceMaster();
         BeanUtils.copyProperties(existing, oldEntity);
+
+        List<InsuranceEmployeeDetail> oldEmployeeDetails = existing.getEmployeeDetails() != null ? new ArrayList<>(existing.getEmployeeDetails()) : new ArrayList<>();
+        List<InsurancePropertyDetail> oldPropertyDetails = existing.getPropertyDetails() != null ? new ArrayList<>(existing.getPropertyDetails()) : new ArrayList<>();
+        List<InsurancePicDetail> oldPicDetails = existing.getPicDetails() != null ? new ArrayList<>(existing.getPicDetails()) : new ArrayList<>();
+        List<InsuranceVehicleDetail> oldVehicleDetails = existing.getVehicleDetails() != null ? new ArrayList<>(existing.getVehicleDetails()) : new ArrayList<>();
+
+        List<InsuranceEmployeeDetail> oldEmployeeSnapshots = snapshotEmployeeDetails(oldEmployeeDetails);
+        List<InsurancePropertyDetail> oldPropertySnapshots = snapshotPropertyDetails(oldPropertyDetails);
+        List<InsurancePicDetail> oldPicSnapshots = snapshotPicDetails(oldPicDetails);
+        List<InsuranceVehicleDetail> oldVehicleSnapshots = snapshotVehicleDetails(oldVehicleDetails);
 
         // Validate unique policy number per company (excluding current record)
 
@@ -270,15 +281,12 @@ public class InsuranceMasterServiceImpl implements InsuranceMasterService {
         existing.setInsuranceAmount(request.getInsuranceAmount());
         existing.setPremiumAmount(request.getPremiumAmount());
         existing.setPaymentFrequency(request.getPaymentFrequency());
+        existing.setOneTime(request.getOneTime() != null ? request.getOneTime() : "N");
         existing.setDescription(request.getDescription());
         existing.setLastModifiedBy(getCurrentUser());
         existing.setLastModifiedDate(LocalDateTime.now());
 
-        // Clear existing child details
-        existing.getEmployeeDetails().clear();
-        existing.getPropertyDetails().clear();
-        existing.getPicDetails().clear();
-
+        
         // Add updated child details
         buildAndSetChildDetails(request, existing);
         if (existing.getPjRefPoid() != null) {
@@ -288,32 +296,141 @@ public class InsuranceMasterServiceImpl implements InsuranceMasterService {
         }
 
         InsuranceMaster updated = insuranceMasterRepository.save(existing);
-        
-        // Logging for update operation
-        loggingService.logChanges(oldEntity, updated, InsuranceMaster.class, UserContext.getDocumentId(), insuranceId.toString(), LogDetailsEnum.MODIFIED, "TRANSACTION_POID");
-        
+
+        String docId = UserContext.getDocumentId();
+        String docKeyPoid = String.valueOf(insuranceId);
+        Timestamp now = new Timestamp(System.currentTimeMillis());
+        List<LogRequestDto<InsuranceMaster>> headerLogRequests = new ArrayList<>();
+        List<GlobalLogSummary> subTableSummaryLogs = new ArrayList<>();
+
+        String modifiedMessage = String.format("Modified - - DOC:%s KEY:%s", docId, docKeyPoid);
+        GlobalLogSummary headerUpdateLog = createSummaryLogEntry(LogDetailsEnum.MODIFIED, docId, docKeyPoid, modifiedMessage, now);
+        globalLogSummaryRepository.save(headerUpdateLog);
+
+        InsuranceMaster oldHeaderOnly = copyHeaderOnlyForLog(oldEntity);
+        InsuranceMaster updatedHeaderOnly = copyHeaderOnlyForLog(updated);
+        String headerLogDetail = String.format("KeyId = TRANSACTION_POID:%s", docKeyPoid);
+        headerLogRequests.add(new LogRequestDto<>(oldHeaderOnly, updatedHeaderOnly, InsuranceMaster.class, docId, docKeyPoid, headerLogDetail));
+
+
+        Set<Long> newEmpDetRowIds = updated.getEmployeeDetails() != null
+                ? updated.getEmployeeDetails().stream().map(InsuranceEmployeeDetail::getDetRowId).collect(Collectors.toSet())
+                : Collections.emptySet();
+        for (InsuranceEmployeeDetail oldEmp : oldEmployeeDetails) {
+            if (!newEmpDetRowIds.contains(oldEmp.getDetRowId())) {
+                String deletedRecordString = String.format("detRowId:%s, transactionPoid:%s, employeePoid:%s, amount:%s, remarks:%s",
+                        oldEmp.getDetRowId(), oldEmp.getTransactionPoid(), oldEmp.getEmployeePoid(), oldEmp.getAmount(), oldEmp.getRemarks());
+                String deleteSummaryMessage = String.format("Row Deleted %s", deletedRecordString);
+                subTableSummaryLogs.add(createSummaryLogEntry(LogDetailsEnum.DELETED, docId, docKeyPoid, deleteSummaryMessage, now));
+            }
+        }
+        Set<Long> oldEmpDetRowIds = oldEmployeeDetails.stream().map(InsuranceEmployeeDetail::getDetRowId).collect(Collectors.toSet());
+        if (updated.getEmployeeDetails() != null) {
+            for (InsuranceEmployeeDetail newEmp : updated.getEmployeeDetails()) {
+                if (!oldEmpDetRowIds.contains(newEmp.getDetRowId())) {
+                    subTableSummaryLogs.add(createSummaryLogEntry(LogDetailsEnum.CREATED, docId, docKeyPoid,
+                            String.format("Row Created on Insurance Master Employee Detail with DetRowId: %s", newEmp.getDetRowId()), now));
+                } else {
+                    InsuranceEmployeeDetail oldSnapshot = findOldEmployeeByDetRowId(oldEmployeeSnapshots, newEmp.getDetRowId());
+                    if (oldSnapshot != null) addDetailLogAndModified(oldSnapshot, newEmp, docId, docKeyPoid, now, subTableSummaryLogs);
+                }
+            }
+        }
+
+        Set<Long> newPropDetRowIds = updated.getPropertyDetails() != null
+                ? updated.getPropertyDetails().stream().map(InsurancePropertyDetail::getDetRowId).collect(Collectors.toSet())
+                : Collections.emptySet();
+        for (InsurancePropertyDetail oldProp : oldPropertyDetails) {
+            if (!newPropDetRowIds.contains(oldProp.getDetRowId())) {
+                String deletedRecordString = String.format("detRowId:%s, transactionPoid:%s, propertyPoid:%s, amount:%s, remarks:%s",
+                        oldProp.getDetRowId(), oldProp.getTransactionPoid(), oldProp.getPropertyPoid(), oldProp.getAmount(), oldProp.getRemarks());
+                String deleteSummaryMessage = String.format("Row Deleted %s", deletedRecordString);
+                subTableSummaryLogs.add(createSummaryLogEntry(LogDetailsEnum.DELETED, docId, docKeyPoid, deleteSummaryMessage, now));
+            }
+        }
+        Set<Long> oldPropDetRowIds = oldPropertyDetails.stream().map(InsurancePropertyDetail::getDetRowId).collect(Collectors.toSet());
+        if (updated.getPropertyDetails() != null) {
+            for (InsurancePropertyDetail newProp : updated.getPropertyDetails()) {
+                if (!oldPropDetRowIds.contains(newProp.getDetRowId())) {
+                    subTableSummaryLogs.add(createSummaryLogEntry(LogDetailsEnum.CREATED, docId, docKeyPoid,
+                            String.format("Row Created on Insurance Master Property Detail with DetRowId: %s", newProp.getDetRowId()), now));
+                } else {
+                    InsurancePropertyDetail oldSnapshot = findOldPropertyByDetRowId(oldPropertySnapshots, newProp.getDetRowId());
+                    if (oldSnapshot != null) addDetailLogAndModified(oldSnapshot, newProp, docId, docKeyPoid, now, subTableSummaryLogs);
+                }
+            }
+        }
+
+        Set<Long> newPicDetRowIds = updated.getPicDetails() != null
+                ? updated.getPicDetails().stream().map(InsurancePicDetail::getDetRowId).collect(Collectors.toSet())
+                : Collections.emptySet();
+        for (InsurancePicDetail oldPic : oldPicDetails) {
+            if (!newPicDetRowIds.contains(oldPic.getDetRowId())) {
+                String deletedRecordString = String.format("detRowId:%s, transactionPoid:%s, rolePoid:%s, contactType:%s, picPerson:%s, fromDate:%s, toDate:%s",
+                        oldPic.getDetRowId(), oldPic.getTransactionPoid(), oldPic.getRolePoid(), oldPic.getContactType(),
+                        oldPic.getPicPerson(), oldPic.getFromDate(), oldPic.getToDate());
+                String deleteSummaryMessage = String.format("Row Deleted %s", deletedRecordString);
+                subTableSummaryLogs.add(createSummaryLogEntry(LogDetailsEnum.DELETED, docId, docKeyPoid, deleteSummaryMessage, now));
+            }
+        }
+        Set<Long> oldPicDetRowIds = oldPicDetails.stream().map(InsurancePicDetail::getDetRowId).collect(Collectors.toSet());
+        if (updated.getPicDetails() != null) {
+            for (InsurancePicDetail newPic : updated.getPicDetails()) {
+                if (!oldPicDetRowIds.contains(newPic.getDetRowId())) {
+                    subTableSummaryLogs.add(createSummaryLogEntry(LogDetailsEnum.CREATED, docId, docKeyPoid,
+                            String.format("Row Created on Insurance Master PIC Detail with DetRowId: %s", newPic.getDetRowId()), now));
+                } else {
+                    InsurancePicDetail oldSnapshot = findOldPicByDetRowId(oldPicSnapshots, newPic.getDetRowId());
+                    if (oldSnapshot != null) addDetailLogAndModified(oldSnapshot, newPic, docId, docKeyPoid, now, subTableSummaryLogs);
+                }
+            }
+        }
+
+        Set<Long> newVehDetRowIds = updated.getVehicleDetails() != null
+                ? updated.getVehicleDetails().stream().map(InsuranceVehicleDetail::getDetRowId).collect(Collectors.toSet())
+                : Collections.emptySet();
+        for (InsuranceVehicleDetail oldVeh : oldVehicleDetails) {
+            if (!newVehDetRowIds.contains(oldVeh.getDetRowId())) {
+                String deletedRecordString = String.format("detRowId:%s, transactionPoid:%s, amount:%s, remarks:%s",
+                        oldVeh.getDetRowId(), oldVeh.getTransactionPoid(), oldVeh.getAmount(), oldVeh.getRemarks());
+                String deleteSummaryMessage = String.format("Row Deleted %s", deletedRecordString);
+                subTableSummaryLogs.add(createSummaryLogEntry(LogDetailsEnum.DELETED, docId, docKeyPoid, deleteSummaryMessage, now));
+            }
+        }
+        Set<Long> oldVehDetRowIds = oldVehicleDetails.stream().map(InsuranceVehicleDetail::getDetRowId).collect(Collectors.toSet());
+        if (updated.getVehicleDetails() != null) {
+            for (InsuranceVehicleDetail newVeh : updated.getVehicleDetails()) {
+                if (!oldVehDetRowIds.contains(newVeh.getDetRowId())) {
+                    subTableSummaryLogs.add(createSummaryLogEntry(LogDetailsEnum.CREATED, docId, docKeyPoid,
+                            String.format("Row Created on Insurance Master Vehicle Detail with DetRowId: %s", newVeh.getDetRowId()), now));
+                } else {
+                    InsuranceVehicleDetail oldSnapshot = findOldVehicleByDetRowId(oldVehicleSnapshots, newVeh.getDetRowId());
+                    if (oldSnapshot != null) addDetailLogAndModified(oldSnapshot, newVeh, docId, docKeyPoid, now, subTableSummaryLogs);
+                }
+            }
+        }
+
+        if (!subTableSummaryLogs.isEmpty()) {
+            globalLogSummaryRepository.saveAll(subTableSummaryLogs);
+        }
+        if (!headerLogRequests.isEmpty()) {
+            loggingService.createLogBatch(headerLogRequests);
+        }
         return mapToResponseDto(updated);
     }
 
     private void buildAndSetChildDetails(InsuranceMasterRequestDto request, InsuranceMaster savedParent) {
-        try {
-            if (request.getEmployeeDetails() != null && !request.getEmployeeDetails().isEmpty()) {
-                System.out.println("Building " + request.getEmployeeDetails().size() + " employee details");
-                savedParent.setEmployeeDetails(buildEmployeeDetails(request.getEmployeeDetails(), savedParent));
-            }
-            if (request.getPropertyDetails() != null && !request.getPropertyDetails().isEmpty()) {
-                System.out.println("Building " + request.getPropertyDetails().size() + " property details");
-                savedParent.setPropertyDetails(buildPropertyDetails(request.getPropertyDetails(), savedParent));
-            }
-
-            if (request.getPicDetails() != null && !request.getPicDetails().isEmpty()) {
-                System.out.println("Building " + request.getPicDetails().size() + " PIC details");
-                savedParent.setPicDetails(buildPicDetails(request.getPicDetails(), savedParent));
-            }
-        } catch (Exception e) {
-            System.err.println("Error building child details: " + e.getMessage());
-            e.printStackTrace();
-            throw e;
+        if (request.getEmployeeDetails() != null && !request.getEmployeeDetails().isEmpty()) {
+            savedParent.setEmployeeDetails(buildEmployeeDetails(request.getEmployeeDetails(), savedParent));
+        }
+        if (request.getPropertyDetails() != null && !request.getPropertyDetails().isEmpty()) {
+            savedParent.setPropertyDetails(buildPropertyDetails(request.getPropertyDetails(), savedParent));
+        }
+        if (request.getPicDetails() != null && !request.getPicDetails().isEmpty()) {
+            savedParent.setPicDetails(buildPicDetails(request.getPicDetails(), savedParent));
+        }
+        if (request.getVehicleNumber() != null && !request.getVehicleNumber().isBlank()) {
+            savedParent.setVehicleDetails(buildVehicleDetails(request.getVehicleNumber(), request.getInsuranceAmount(), savedParent));
         }
     }
 
@@ -403,6 +520,22 @@ public class InsuranceMasterServiceImpl implements InsuranceMasterService {
         return result;
     }
 
+    private List<InsuranceVehicleDetail> buildVehicleDetails(String vehicleNumber, BigDecimal amount, InsuranceMaster parent) {
+        List<InsuranceVehicleDetail> result = new ArrayList<>();
+        result.add(InsuranceVehicleDetail.builder()
+                .transactionPoid(parent.getTransactionPoid())
+                .detRowId(1L)
+                .fixedAssetPoid(null)
+                .amount(amount)
+                .remarks(vehicleNumber)
+                .createdBy(getCurrentUser())
+                .createdDate(LocalDateTime.now())
+                .lastModifiedBy(getCurrentUser())
+                .lastModifiedDate(LocalDateTime.now())
+                .build());
+        return result;
+    }
+
     private InsuranceMasterResponseDto mapToResponseDto(InsuranceMaster entity) {
         return InsuranceMasterResponseDto.builder()
                 .insurancePoid(entity.getTransactionPoid())
@@ -431,6 +564,7 @@ public class InsuranceMasterServiceImpl implements InsuranceMasterService {
                 .employeeDetails(mapEmployeeDetails(entity.getEmployeeDetails()))
                 .propertyDetails(mapPropertyDetails(entity.getPropertyDetails()))
                 .picDetails(mapPicDetails(entity.getPicDetails()))
+                .renewalLogs(mapRenewalLogs(entity.getRenewalLogs()))
                 .build();
     }
 
@@ -452,7 +586,6 @@ public class InsuranceMasterServiceImpl implements InsuranceMasterService {
         return entities.stream()
                 .map(e -> InsuranceEmployeeDetailResponseDto.builder()
                         .employeeDetailPoid(e.getDetRowId())
-                       // .sn(e.getDetRowId().intValue())
                         .amount(e.getAmount())
                         .remarks(e.getRemarks())
                         .build())
@@ -487,33 +620,18 @@ public class InsuranceMasterServiceImpl implements InsuranceMasterService {
                 .toList();
     }
 
-    private List<InsuranceRenewalLog> buildRenewalLogs(List<InsuranceRenewalLogRequestDto> dtos, InsuranceMaster parent) {
-        if (dtos == null) return new ArrayList<>();
-
-        LocalDate today = LocalDate.now();
-
-        return IntStream.range(0, dtos.size())
-                .mapToObj(i -> {
-                    InsuranceRenewalLogRequestDto dto = dtos.get(i);
-
-                    // Validate renewal date is not in future
-                    if (dto.getRenewalDate().isAfter(today)) {
-                        throw new ValidationException("Renewal date cannot be in the future");
-                    }
-
-                    return InsuranceRenewalLog.builder()
-                            .transactionPoid(parent.getTransactionPoid())
-                            .detRowId((long) (i + 1))
-                            .renewalDate(dto.getRenewalDate())
-                            .fromDate(dto.getFromDate())
-                            .expiryDate(dto.getExpiryDate())
-                            .createdBy(getCurrentUser())
-                            .createdDate(LocalDateTime.now())
-                            .lastModifiedBy(getCurrentUser())
-                            .lastModifiedDate(LocalDateTime.now())
-                            .build();
-                })
-                .collect(Collectors.toList());
+    private List<InsuranceRenewalLogResponseDto> mapRenewalLogs(List<InsuranceRenewalLog> entities) {
+        if (entities == null) return new ArrayList<>();
+        return entities.stream()
+                .map(e -> InsuranceRenewalLogResponseDto.builder()
+                        .detRowId(e.getDetRowId())
+                        .renewalDate(e.getRenewalDate())
+                        .fromDate(e.getFromDate())
+                        .expiryDate(e.getExpiryDate())
+                        .insuranceAmount(e.getInsuranceAmount())
+                        .premiumAmount(e.getPremiumAmount())
+                        .build())
+                .toList();
     }
 
     private String normalizeAction(String actionType) {
@@ -528,9 +646,8 @@ public class InsuranceMasterServiceImpl implements InsuranceMasterService {
 
     public DetailsDto getRoleDetails(Long rolePoid) {
         RoleDto roleDto = roleServiceClient.findById(rolePoid);
-
         if (roleDto == null) {
-            new ResourceNotFoundException("Global User Role", "userRolePoid", rolePoid);
+            throw new ResourceNotFoundException("Global User Role", "userRolePoid", rolePoid);
         }
         return new DetailsDto(
                 roleDto.getUserRolePoid(),     // poid
@@ -542,6 +659,179 @@ public class InsuranceMasterServiceImpl implements InsuranceMasterService {
         );
     }
 
+    private GlobalLogSummary createSummaryLogEntry(LogDetailsEnum logDetailsEnum, String docId, String docKeyPoid, String customMessage, Timestamp logDateTime) {
+        GlobalLogSummary summary = new GlobalLogSummary();
+        summary.setLogUserPoid(UserContext.getUserPoid());
+        summary.setLogDateTime(logDateTime != null ? logDateTime : new Timestamp(System.currentTimeMillis()));
+        summary.setLogDocId(docId);
+        summary.setLogDocKeyPoid(docKeyPoid);
+        summary.setLogDetails(customMessage);
+        return summary;
+    }
+
+    private InsuranceEmployeeDetail findOldEmployeeByDetRowId(List<InsuranceEmployeeDetail> list, Long detRowId) {
+        if (list == null || detRowId == null) return null;
+        return list.stream().filter(e -> detRowId.equals(e.getDetRowId())).findFirst().orElse(null);
+    }
+    private InsurancePropertyDetail findOldPropertyByDetRowId(List<InsurancePropertyDetail> list, Long detRowId) {
+        if (list == null || detRowId == null) return null;
+        return list.stream().filter(p -> detRowId.equals(p.getDetRowId())).findFirst().orElse(null);
+    }
+    private InsurancePicDetail findOldPicByDetRowId(List<InsurancePicDetail> list, Long detRowId) {
+        if (list == null || detRowId == null) return null;
+        return list.stream().filter(p -> detRowId.equals(p.getDetRowId())).findFirst().orElse(null);
+    }
+    private InsuranceVehicleDetail findOldVehicleByDetRowId(List<InsuranceVehicleDetail> list, Long detRowId) {
+        if (list == null || detRowId == null) return null;
+        return list.stream().filter(v -> detRowId.equals(v.getDetRowId())).findFirst().orElse(null);
+    }
+
+    private List<InsuranceEmployeeDetail> snapshotEmployeeDetails(List<InsuranceEmployeeDetail> list) {
+        if (list == null || list.isEmpty()) return new ArrayList<>();
+        List<InsuranceEmployeeDetail> snapshots = new ArrayList<>();
+        for (InsuranceEmployeeDetail e : list) {
+            InsuranceEmployeeDetail s = new InsuranceEmployeeDetail();
+            BeanUtils.copyProperties(e, s);
+            s.setTransactionPoid(e.getTransactionPoid());
+            s.setDetRowId(e.getDetRowId());
+            s.setInsuranceMaster(null);
+            snapshots.add(s);
+        }
+        return snapshots;
+    }
+    private List<InsurancePropertyDetail> snapshotPropertyDetails(List<InsurancePropertyDetail> list) {
+        if (list == null || list.isEmpty()) return new ArrayList<>();
+        List<InsurancePropertyDetail> snapshots = new ArrayList<>();
+        for (InsurancePropertyDetail p : list) {
+            InsurancePropertyDetail s = new InsurancePropertyDetail();
+            BeanUtils.copyProperties(p, s);
+            s.setTransactionPoid(p.getTransactionPoid());
+            s.setDetRowId(p.getDetRowId());
+            s.setInsuranceMaster(null);
+            snapshots.add(s);
+        }
+        return snapshots;
+    }
+    private List<InsurancePicDetail> snapshotPicDetails(List<InsurancePicDetail> list) {
+        if (list == null || list.isEmpty()) return new ArrayList<>();
+        List<InsurancePicDetail> snapshots = new ArrayList<>();
+        for (InsurancePicDetail p : list) {
+            InsurancePicDetail s = new InsurancePicDetail();
+            BeanUtils.copyProperties(p, s);
+            s.setTransactionPoid(p.getTransactionPoid());
+            s.setDetRowId(p.getDetRowId());
+            s.setInsuranceMaster(null);
+            snapshots.add(s);
+        }
+        return snapshots;
+    }
+    private List<InsuranceVehicleDetail> snapshotVehicleDetails(List<InsuranceVehicleDetail> list) {
+        if (list == null || list.isEmpty()) return new ArrayList<>();
+        List<InsuranceVehicleDetail> snapshots = new ArrayList<>();
+        for (InsuranceVehicleDetail v : list) {
+            InsuranceVehicleDetail s = new InsuranceVehicleDetail();
+            BeanUtils.copyProperties(v, s);
+            s.setTransactionPoid(v.getTransactionPoid());
+            s.setDetRowId(v.getDetRowId());
+            s.setInsuranceMaster(null);
+            snapshots.add(s);
+        }
+        return snapshots;
+    }
+
+    private void addDetailLogAndModified(InsuranceEmployeeDetail oldE, InsuranceEmployeeDetail newE, String docId, String docKeyPoid, Timestamp now, List<GlobalLogSummary> summaryLogs) {
+        saveEmployeeDetailLogsToGlobalLogDetails(oldE, newE, docId, docKeyPoid, now);
+    }
+    private void addDetailLogAndModified(InsurancePropertyDetail oldE, InsurancePropertyDetail newE, String docId, String docKeyPoid, Timestamp now, List<GlobalLogSummary> summaryLogs) {
+        savePropertyDetailLogsToGlobalLogDetails(oldE, newE, docId, docKeyPoid, now);
+    }
+    private void addDetailLogAndModified(InsurancePicDetail oldE, InsurancePicDetail newE, String docId, String docKeyPoid, Timestamp now, List<GlobalLogSummary> summaryLogs) {
+        savePicDetailLogsToGlobalLogDetails(oldE, newE, docId, docKeyPoid, now);
+    }
+    private void addDetailLogAndModified(InsuranceVehicleDetail oldE, InsuranceVehicleDetail newE, String docId, String docKeyPoid, Timestamp now, List<GlobalLogSummary> summaryLogs) {
+        saveVehicleDetailLogsToGlobalLogDetails(oldE, newE, docId, docKeyPoid, now);
+    }
+
+    private static String toLogValue(Object o) {
+        if (o == null) return null;
+        return o.toString();
+    }
+
+    private void saveDetailLogRow(String docId, String docKeyPoid, String logDetailsKey, String logTable, String fieldName, Object oldVal, Object newVal, Timestamp now) {
+        GlobalLogDetails d = new GlobalLogDetails();
+        d.setLogUserPoid(UserContext.getUserPoid());
+        d.setLogDateTime(now);
+        d.setLogDocId(docId);
+        d.setLogDocKeyPoid(docKeyPoid);
+        d.setFieldName(fieldName);
+        d.setOldValue(toLogValue(oldVal));
+        d.setNewValue(toLogValue(newVal));
+        d.setLogDetails(logDetailsKey);
+        d.setLogTable(logTable);
+        globalLogDetailsRepository.save(d);
+    }
+
+    private void saveEmployeeDetailLogsToGlobalLogDetails(InsuranceEmployeeDetail oldE, InsuranceEmployeeDetail newE, String docId, String docKeyPoid, Timestamp now) {
+        String logDetailsKey = String.format("KeyId = TRANSACTION_POID:%s DET_ROW_ID:%s", docKeyPoid, oldE.getDetRowId());
+        String table = "GLOBAL_INSURANCE_EMPLOYEE_DTL";
+        if (!Objects.equals(oldE.getEmployeePoid(), newE.getEmployeePoid()))
+            saveDetailLogRow(docId, docKeyPoid, logDetailsKey, table, "employeePoid", oldE.getEmployeePoid(), newE.getEmployeePoid(), now);
+        if (!Objects.equals(oldE.getAmount(), newE.getAmount()))
+            saveDetailLogRow(docId, docKeyPoid, logDetailsKey, table, "amount", oldE.getAmount(), newE.getAmount(), now);
+        if (!Objects.equals(oldE.getRemarks(), newE.getRemarks()))
+            saveDetailLogRow(docId, docKeyPoid, logDetailsKey, table, "remarks", oldE.getRemarks(), newE.getRemarks(), now);
+    }
+
+    private void savePropertyDetailLogsToGlobalLogDetails(InsurancePropertyDetail oldE, InsurancePropertyDetail newE, String docId, String docKeyPoid, Timestamp now) {
+        String logDetailsKey = String.format("KeyId = TRANSACTION_POID:%s DET_ROW_ID:%s", docKeyPoid, oldE.getDetRowId());
+        String table = "GLOBAL_INSURANCE_PROPERTY_DTL";
+        if (!Objects.equals(oldE.getPropertyPoid(), newE.getPropertyPoid()))
+            saveDetailLogRow(docId, docKeyPoid, logDetailsKey, table, "propertyPoid", oldE.getPropertyPoid(), newE.getPropertyPoid(), now);
+        if (!Objects.equals(oldE.getAmount(), newE.getAmount()))
+            saveDetailLogRow(docId, docKeyPoid, logDetailsKey, table, "amount", oldE.getAmount(), newE.getAmount(), now);
+        if (!Objects.equals(oldE.getRemarks(), newE.getRemarks()))
+            saveDetailLogRow(docId, docKeyPoid, logDetailsKey, table, "remarks", oldE.getRemarks(), newE.getRemarks(), now);
+    }
+
+    private void savePicDetailLogsToGlobalLogDetails(InsurancePicDetail oldE, InsurancePicDetail newE, String docId, String docKeyPoid, Timestamp now) {
+        String logDetailsKey = String.format("KeyId = TRANSACTION_POID:%s DET_ROW_ID:%s", docKeyPoid, oldE.getDetRowId());
+        String table = "GLOBAL_INSURANCE_PIC_DTL";
+        if (!Objects.equals(oldE.getRolePoid(), newE.getRolePoid()))
+            saveDetailLogRow(docId, docKeyPoid, logDetailsKey, table, "rolePoid", oldE.getRolePoid(), newE.getRolePoid(), now);
+        if (!Objects.equals(oldE.getContactType(), newE.getContactType()))
+            saveDetailLogRow(docId, docKeyPoid, logDetailsKey, table, "contactType", oldE.getContactType(), newE.getContactType(), now);
+        if (!Objects.equals(oldE.getPicPerson(), newE.getPicPerson()))
+            saveDetailLogRow(docId, docKeyPoid, logDetailsKey, table, "picPerson", oldE.getPicPerson(), newE.getPicPerson(), now);
+        if (!Objects.equals(oldE.getFromDate(), newE.getFromDate()))
+            saveDetailLogRow(docId, docKeyPoid, logDetailsKey, table, "fromDate", oldE.getFromDate(), newE.getFromDate(), now);
+        if (!Objects.equals(oldE.getToDate(), newE.getToDate()))
+            saveDetailLogRow(docId, docKeyPoid, logDetailsKey, table, "toDate", oldE.getToDate(), newE.getToDate(), now);
+    }
+
+    private void saveVehicleDetailLogsToGlobalLogDetails(InsuranceVehicleDetail oldE, InsuranceVehicleDetail newE, String docId, String docKeyPoid, Timestamp now) {
+        String logDetailsKey = String.format("KeyId = TRANSACTION_POID:%s DET_ROW_ID:%s", docKeyPoid, oldE.getDetRowId());
+        String table = "GLOBAL_INSURANCE_VEHICLE_DTL";
+        if (!Objects.equals(oldE.getFixedAssetPoid(), newE.getFixedAssetPoid()))
+            saveDetailLogRow(docId, docKeyPoid, logDetailsKey, table, "fixedAssetPoid", oldE.getFixedAssetPoid(), newE.getFixedAssetPoid(), now);
+        if (!Objects.equals(oldE.getAmount(), newE.getAmount()))
+            saveDetailLogRow(docId, docKeyPoid, logDetailsKey, table, "amount", oldE.getAmount(), newE.getAmount(), now);
+        if (!Objects.equals(oldE.getRemarks(), newE.getRemarks()))
+            saveDetailLogRow(docId, docKeyPoid, logDetailsKey, table, "remarks", oldE.getRemarks(), newE.getRemarks(), now);
+    }
+
+   
+    private InsuranceMaster copyHeaderOnlyForLog(InsuranceMaster source) {
+        InsuranceMaster copy = new InsuranceMaster();
+        BeanUtils.copyProperties(source, copy);
+        copy.setEmployeeDetails(null);
+        copy.setPropertyDetails(null);
+        copy.setPicDetails(null);
+        copy.setVehicleDetails(null);
+        copy.setInsuranceDetails(null);
+        copy.setRenewalLogs(null);
+        return copy;
+    }
+
     @Override
     @Transactional
     public InsuranceMasterResponseDto renewInsurance(Long insuranceId, InsuranceMasterRequestDto request) {
@@ -550,15 +840,18 @@ public class InsuranceMasterServiceImpl implements InsuranceMasterService {
 
         LocalDate today = LocalDate.now();
 
-        // Validate insurance can be renewed (must be expired or expiring)
         if (existing.getExpiryDate().isAfter(today)) {
             throw new ValidationException("Insurance can only be renewed on or after expiry date");
         }
 
-        // Archive current details to renewal log
+        LocalDate oldFromDate = existing.getFromDate();
+        LocalDate oldExpiryDate = existing.getExpiryDate();
+        BigDecimal oldInsuranceAmount = existing.getInsuranceAmount();
+        BigDecimal oldPremiumAmount = existing.getPremiumAmount();
+
         InsuranceRenewalLog renewalLog = InsuranceRenewalLog.builder()
                 .transactionPoid(existing.getTransactionPoid())
-                .detRowId((long) (existing.getRenewalLogs().size() + 1))
+                .detRowId(existing.getRenewalLogs() != null ? (long) (existing.getRenewalLogs().size() + 1) : 1L)
                 .renewalDate(LocalDate.now())
                 .fromDate(existing.getFromDate())
                 .expiryDate(existing.getExpiryDate())
@@ -570,9 +863,11 @@ public class InsuranceMasterServiceImpl implements InsuranceMasterService {
                 .lastModifiedDate(LocalDateTime.now())
                 .build();
 
+        if (existing.getRenewalLogs() == null) {
+            existing.setRenewalLogs(new ArrayList<>());
+        }
         existing.getRenewalLogs().add(renewalLog);
 
-        // Update with new renewal details
         existing.setFromDate(request.getFromDate());
         existing.setExpiryDate(request.getExpiryDate());
         existing.setInsuranceAmount(request.getInsuranceAmount());
@@ -581,6 +876,30 @@ public class InsuranceMasterServiceImpl implements InsuranceMasterService {
         existing.setLastModifiedDate(LocalDateTime.now());
 
         InsuranceMaster renewed = insuranceMasterRepository.save(existing);
+
+        String docId = UserContext.getDocumentId();
+        String docKeyPoid = String.valueOf(insuranceId);
+        Timestamp now = new Timestamp(System.currentTimeMillis());
+
+        String renewedMessage = String.format("Modified - - DOC:%s KEY:%s", docId, docKeyPoid);
+        globalLogSummaryRepository.save(createSummaryLogEntry(LogDetailsEnum.MODIFIED, docId, docKeyPoid, renewedMessage, now));
+
+        List<GlobalLogSummary> renewalSummaryLogs = new ArrayList<>();
+        renewalSummaryLogs.add(createSummaryLogEntry(LogDetailsEnum.CREATED, docId, docKeyPoid,
+                String.format("Row Created on Insurance Master Renewal Log with DetRowId: %s", renewalLog.getDetRowId()), now));
+        globalLogSummaryRepository.saveAll(renewalSummaryLogs);
+
+        String headerLogDetailsKey = String.format("KeyId = TRANSACTION_POID:%s", docKeyPoid);
+        String headerTable = "GLOBAL_INSURANCE_HDR";
+        if (!Objects.equals(oldFromDate, request.getFromDate()))
+            saveDetailLogRow(docId, docKeyPoid, headerLogDetailsKey, headerTable, "fromDate", oldFromDate, request.getFromDate(), now);
+        if (!Objects.equals(oldExpiryDate, request.getExpiryDate()))
+            saveDetailLogRow(docId, docKeyPoid, headerLogDetailsKey, headerTable, "expiryDate", oldExpiryDate, request.getExpiryDate(), now);
+        if (!Objects.equals(oldInsuranceAmount, request.getInsuranceAmount()))
+            saveDetailLogRow(docId, docKeyPoid, headerLogDetailsKey, headerTable, "insuranceAmount", oldInsuranceAmount, request.getInsuranceAmount(), now);
+        if (!Objects.equals(oldPremiumAmount, request.getPremiumAmount()))
+            saveDetailLogRow(docId, docKeyPoid, headerLogDetailsKey, headerTable, "premiumAmount", oldPremiumAmount, request.getPremiumAmount(), now);
+
         return mapToResponseDto(renewed);
     }
 }
